Project

General

Profile

Actions

Bug #5330

closed

zone brands could control init restart behavior

Added by Robert Mustacchi over 8 years ago. Updated over 8 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
zones
Start date:
2014-11-14
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

For most zones, they want to have a traditional behavior where when init crashes, the system restarts it. With the KVM brand that we developed at Joyent, we don't really want that behavior and instead would rather the zone halted. This work makes that an option on the brand.


Related issues

Related to illumos gate - Feature #14019: Allow more control over zone init exit actionsClosedAndy Fiddaman

Actions
Actions #1

Updated by Electric Monk over 8 years ago

  • Status changed from New to Closed

git commit bafd1f1462c49949e0251d74b4fbfa24d29bc79a

commit  bafd1f1462c49949e0251d74b4fbfa24d29bc79a
Author: Jerry Jelinek <jerry.jelinek@joyent.com>
Date:   2014-12-05T22:57:33.000Z

    5330 zone brands could control init restart behavior
    Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com>
    Reviewed by: Gordon Ross <gwr@nexenta.com>
    Reviewed by: Josef 'Jeff' Sipek <josef.sipek@nexenta.com>
    Reviewed by: Richard Lowe <richlowe@richlowe.net>
    Approved by: Dan McDonald <danmcd@omniti.com>

Actions #2

Updated by Andy Fiddaman almost 2 years ago

  • Related to Feature #14019: Allow more control over zone init exit actions added
Actions

Also available in: Atom PDF