usr/src/lib/libbrand/common/libbrand.c
@@ -21,6 +21,7 @@
 
 /*
  * Copyright (c) 2006, 2010, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, Joyent, Inc. All rights reserved.
  * Copyright 2014 Nexenta Systems, Inc. All rights reserved.
  */
 
@@ -61,6 +62,7 @@
 #define	DTD_ELEM_FORCELOGIN_CMD	((const xmlChar *) "forcedlogin_cmd")
 #define	DTD_ELEM_MODNAME	((const xmlChar *) "modname")
 #define	DTD_ELEM_MOUNT		((const xmlChar *) "mount")
+#define	DTD_ELEM_RESTARTINIT	((const xmlChar *) "restartinit")
 #define	DTD_ELEM_POSTATTACH	((const xmlChar *) "postattach")
 #define	DTD_ELEM_POSTCLONE	((const xmlChar *) "postclone")
 #define	DTD_ELEM_POSTINSTALL	((const xmlChar *) "postinstall")
@@ -518,6 +520,21 @@ brand_get_initname(brand_handle_t bh, char *buf, size_t len)
 	struct brand_handle *bhp = (struct brand_handle *)bh;
 	return (brand_get_value(bhp, NULL, NULL, NULL, NULL,
 	    buf, len, DTD_ELEM_INITNAME, B_FALSE, B_FALSE));
+}
+
+boolean_t
+brand_restartinit(brand_handle_t bh)
+{
+	struct brand_handle *bhp = (struct brand_handle *)bh;
+	char val[80];
+
+	if (brand_get_value(bhp, NULL, NULL, NULL, NULL,
+	    val, sizeof (val), DTD_ELEM_RESTARTINIT, B_FALSE, B_FALSE) != 0)
+		return (B_TRUE);
+
+	if (strcmp(val, "false") == 0)
+		return (B_FALSE);
+	return (B_TRUE);
 }
 
 int
